# agents

./: README.md  main.py  pyproject.toml
.github/agents/: MP-HTML-Dashboard.agent.md  html-template.md  logo_b64.txt
agent/: __init__.py  agent.py  builtin_tools.py  tools.py
agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
examples/: simple_agent.py
tests/: test_agent.py  test_tools.py
