[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "agents"
version = "0.1.0"
description = "A lightweight, extensible custom agent framework"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
custom-agent = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
